--- a/src/components/Body/BodyMobile.css
+++ b/src/components/Body/BodyMobile.css
@@ -35,8 +35,8 @@
     .featured-wrapper {
         margin-right: 0;
         border-bottom: 1px solid #000;
-        padding-bottom: 20px;
-        margin-bottom: 20px;
+        padding-bottom: 24px;
+        margin-bottom: 24px;
         padding-left: 0;
         padding-right: 0;
     }
@@ -55,8 +55,8 @@
     .main-articles-grid .article-link {
         background-color: transparent;
         border-bottom: 1px solid #000;
-        padding-bottom: 20px;
-        margin-bottom: 20px;
+        padding-bottom: 24px;
+        margin-bottom: 24px;
         display: block;
         padding-left: 0;
         padding-right: 0;
@@ -78,8 +78,8 @@
     .body-sidebar .article-link {
         display: block;
         border-bottom: 1px solid #000;
-        padding-bottom: 20px;
-        margin-bottom: 20px;
+        padding-bottom: 24px;
+        margin-bottom: 24px;
         padding-left: 0;
         padding-right: 0;
     }
@@ -97,17 +97,17 @@
     }
 
     .featured-wrapper {
-        padding-bottom: 16px;
-        margin-bottom: 16px;
+        padding-bottom: 20px;
+        margin-bottom: 20px;
     }
 
     .main-articles-grid .article-link {
-        padding-bottom: 16px;
-        margin-bottom: 16px;
+        padding-bottom: 20px;
+        margin-bottom: 20px;
     }
 
     .body-sidebar .article-link {
-        padding-bottom: 16px;
-        margin-bottom: 16px;
+        padding-bottom: 20px;
+        margin-bottom: 20px;
     }
 }
